Added some tests and code to parse some hearings that have wrongly formatted first pages. Also, fixed some bad characters in hearing files. Cleaned up address parsing.